bin/tests/sema/sema-compiler-global-attribute-err.swg
#global internal
#global #[Swag] // swc-expected-error {{sema_err_not_attribute}}
